add logic amount product

--- a/Areas/Admin/Views/Account/Edit.cshtml
+++ b/Areas/Admin/Views/Account/Edit.cshtml
@@ -1,5 +1,7 @@
 ﻿@model AppleStore.Models.Account
-
+@{
+    ViewData["Title"] = "Sửa tài khoản";
+}
 <div class="container mt-4">
     <h2 class="text-center mb-4">Chỉnh sửa tài khoản</h2>
 
