--- a/Areas/Admin/Views/Account/Index.cshtml
+++ b/Areas/Admin/Views/Account/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<dynamic>
-
+@{
+    ViewData["Title"] = "Quản lý tài khoản";
+}
 <div class="container mt-4">
     <h2 class="text-center mb-4">Danh sách tài khoản</h2>
     <div class="text-end">
