--- a/Areas/Admin/Views/Category/Create.cshtml
+++ b/Areas/Admin/Views/Category/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AppleStore.Models.Category
 
 @{
-    ViewData["Title"] = "Thêm dạm mục mới";
+    ViewData["Title"] = "Thêm danh mục mới";
 }
 <div class="container">
 <h1>Thêm danh mục</h1>
