--- a/Areas/Admin/Views/Category/Index.cshtml
+++ b/Areas/Admin/Views/Category/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AppleStore.Models.Category>
 
 @{
-    ViewData["Title"] = "Quản lý thể loại";
+    ViewData["Title"] = "Quản lý danh mục";
 }
 <div class="container">
 <h1>Danh mục</h1>
