--- a/Views/Home/may-cu.cshtml
+++ b/Views/Home/may-cu.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Âm thanh";
+    ViewData["Title"] = "Máy cũ";
 }
 @model ProductViewModel
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
