--- a/Areas/Admin/Views/Order/Detail.cshtml
+++ b/Areas/Admin/Views/Order/Detail.cshtml
@@ -1,5 +1,7 @@
 ﻿@model AppleStore.Models.Order
-
+@{
+    ViewData["Title"] = "Chi tiết đơn hàng";
+}
 <div class="container mt-4">
     <h2>Chi tiết đơn hàng</h2>
     <hr />
