--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
     <link href="@Url.Content("~/css/custom.min.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/css/customscreen.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/js/jquery-3.6.3.min.js")"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 <body>
     <!-- Begin page -->
@@ -148,6 +150,21 @@
         <div class="vertical-overlay"></div>
 
         <div class="main-content">
+            <div class="toast-container position-fixed top-0 end-0 p-3">
+                <div id="liveToast" class="toast fade" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-header">
+                        <svg class="bd-placeholder-img rounded me-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                            <rect width="100%" height="100%" fill="#007aff"></rect>
+                        </svg>
+                        <strong class="me-auto">Thông báo</strong>
+                        <small>Vừa xong</small>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                    <div id="toast-body" class="toast-body">
+                        <!-- Thông báo sẽ hiển thị ở đây -->
+                    </div>
+                </div>
+            </div>
 
             <div class="page-content">
 				<div class="container-fluid">
@@ -230,7 +247,7 @@
     <script src="@Url.Content("~/js/app.js")"></script>
     <script src="@Url.Content("~/js/customstart.js")"></script>
     <script src="@Url.Content("~/js/pages/form-editor.init.js")"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
 </body>
 </html>
