--- a/Views/Cart/ResultCallbackVnpay.cshtml
+++ b/Views/Cart/ResultCallbackVnpay.cshtml
@@ -1,5 +1,7 @@
 ﻿@model AppleStore.Models.Vnpay.PaymentResponseModel
-
+@{
+    ViewData["Title"] = "Thanh toán";
+}
 <div class="container mt-5">
     <h2 class="text-center @(Model.VnPayResponseCode == "00" ? "text-success" : "text-danger")">
         @(Model.VnPayResponseCode == "00" ? "Thanh toán thành công!" : "Thanh toán thất bại")
@@ -17,10 +19,6 @@
             <p><strong>Phương thức thanh toán:</strong> @Model.PaymentMethod</p>
             <p><strong>Mô tả đơn hàng:</strong> @Model.OrderDescription</p>
             <p><strong>Mã đơn hàng:</strong> @Model.OrderId</p>
-            <p><strong>Mã giao dịch (PaymentId):</strong> @Model.PaymentId</p>
-            <p><strong>Mã giao dịch VnPay:</strong> @Model.TransactionId</p>
-            <p><strong>Mã token bảo mật:</strong> @Model.Token</p>
-            <p><strong>Mã phản hồi từ VnPay:</strong> @Model.VnPayResponseCode</p>
         </div>
         <div class="card-footer text-center">
             <p class="text-muted">
